--- a/package.json
+++ b/package.json
@@ -2,13 +2,12 @@
   "name": "astro-nomy",
   "type": "module",
   "version": "0.1.0",
-  "scripts": {
-    "dev": "astro dev",
-    "start": "astro dev",
-    "build-local": "astro build",
-    "build": "astro build --remote",
-    "preview": "astro preview",
-    "astro": "astro"
+"scripts": {
+  "dev": "astro dev",
+  "start": "astro dev",
+  "build": "astro build",
+  "preview": "astro preview",
+  "astro": "astro"
   },
   "dependencies": {
     "@astrojs/db": "^0.11.4",
